@@ -8,13 +8,14 @@
 
 VM_PREFIX* tb = nullptr;
 
-double sc_time_stamp() {
-    return 2 * 1e9;  // e.g. 2 seconds in ns units
-}
+double s_time = 0.0;
+
+double sc_time_stamp() { return s_time; }
 
 int main() {
     tb = new VM_PREFIX{"tb"};
 
+    s_time = 2 * 1e9;  // e.g. 2 seconds in ns units
     tb->eval();
     tb->eval();
     tb->eval();
